--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,3 +4,17 @@
   background-image: url(./img/background.jpg);
   
 }
+.productNameFont{
+  font-size: 14px;
+  font-weight: 600;
+}
+uk-subnav>*>:first-child{
+    display: flex;
+    align-items: center;
+    column-gap: 0.25em;
+    font-size: large;
+    font-weight: 600;
+    text-transform: uppercase;
+    transition: .1s ease-in-out;
+    transition-property: color,background-color;
+}
