--- a/user/src/index.css
+++ b/user/src/index.css
@@ -32,8 +32,12 @@
 .addPos{
   position: relative;
   right: 15px; 
-}
+}   
 .submitPos{
   position: relative;
   left: 30%;  
+}
+.submitPos2{
+  position: relative;
+  left: 77%
 }
